simplify config/pattern file reading